# Astroflow

./: .gitignore  BEFORE_AFTER.md  CHANGELOG.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  LICENSE  LOGGING_GUIDE.md  MIGRATION.md  README.md  REFACTORING_PROGRESS.md  REFACTORING_SUMMARY.md  config_example.yaml  config_template.yaml  pyproject.toml  pytest.ini  requirements.txt  roadmap.txt  setup.py  setup_config.py  workflow_template.yaml
.github/workflows/: ci.yml  docs.yml
astroflow/: __init__.py  conf.py  config.py  default.mplstyle  default_cfg.yaml  default_config.yaml  io_utils.py  log.py  logging.py  parallel.py  utils.py
astroflow/analysis/: __init__.py  derived.py  derived_prop.py  postpro.py  registry.py  settings.py
astroflow/core/: __init__.py  load.py  registries.py  registry.py  sim_metadata.py  simulation.py
astroflow/plot/: __init__.py  data.py  plot.py  registry.py  render.py  settings.py
astroflow/workflow/: __init__.py  registry.py  settings.py  workflow.py
docs/: conf.py  index.rst
examples/: 01_basic_projection.ipynb  01_workflow_basics.ipynb  02_centering_strategies.ipynb  README.md  basic_usage.py  logging_demo.py
scripts/: basic_analysis.ipynb
src/cosmo_analysis/: config.py  config_utils.py  log.py
src/cosmo_analysis/core/: centering.py  constants.py  fields.py  sim_objs.py  sim_prop.py  utils.py
src/cosmo_analysis/io/: load.py
src/cosmo_analysis/plot/: README.md  __init__.py  base.py  galaxy.py  halo.py  phase.py  plots.py  profiles.py  projection.py  star_formation.py  utils.py  workflows.py
src/cosmo_analysis/workflow/: __init__.py  engine.py  standard.py
tests/: __init__.py  conftest.py  test_centering.py  test_config.py  test_config_utils.py  test_fields.py  test_logging.py  test_plot_base.py  test_plot_galaxy.py  test_plot_halo.py  test_plot_integration.py  test_plot_phase.py  test_plot_profiles.py  test_plot_star_formation.py  test_plot_utils.py  test_plot_visual_regression.py  test_workflow.py
